force-app/main/default/objects/User_Profile__c/User_Profile__c.object-meta.xml
<CustomObject>
    <description>Information for the related contact to login</description>
    <label>User_Profile</label>
    <nameField>
        <label>User_Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User_Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>