force-app/main/default/objects/User_Profile__c/fields/Contact_User__c.field-meta.xml
<CustomField>
    <fullName>Contact_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact the the user profile is related to</description>
    <label>Contact_User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User_Profiles</relationshipLabel>
    <relationshipName>User_Profiles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>