force-app/main/default/objects/User_Profile__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>eMail address for the user profile of the contact</description>
    <inlineHelpText>eMail must match the eMail of the contact related to this user profile.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>