force-app/main/default/objects/User_Profile__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for the user profile</description>
    <inlineHelpText>Must follow guideline of including one letter, one number, and must be more than eight characters long.</inlineHelpText>
    <label>Password</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>