force-app/main/default/objects/User_Profile__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number of user profile</description>
    <inlineHelpText>Phone number of contact associated with this user profile.</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>